# geofeed-validator

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.rst  README.txt  changelog.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
geofeed_validator/: __init__.py  result.py  utils.py
geofeed_validator/fields/: __init__.py  base.py  draft02_extension.py
geofeed_validator/validator/: __init__.py  base.py  draft02.py
src/geofeed_validator/: __init__.py  result.py  utils.py
src/geofeed_validator/fields/: __init__.py  base.py  draft02_extension.py  final.py
src/geofeed_validator/validator/: __init__.py  base.py  draft02.py  final.py
tests/: __init__.py  result_tests.py  test_geofeed_validator.py  test_result.py  test_utils.py  utils_tests.py
tests/fields_tests/: __init__.py  base.py  draft02_extension.py
tests/test_fields/: __init__.py  test_base.py  test_draft02_extension.py
tests/test_validator/: __init__.py  test_base.py  test_draft02.py  test_final.py
tests/validator_tests/: __init__.py  base.py  draft02.py
