[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.11,<0.9.0"]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9.0.0",
    "coveralls>=4.0.1,<5.0.0",
    "pre-commit>=4.3.0,<5.0.0",
    "pytest-cov>=6.2.1",
]

[project]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pycountry>=20.7.3",
    "netaddr>=0.8,<1",
]
description = "Validator library for self-published geo feeds"
name = "geofeed-validator"
readme = "README.rst"
requires-python = "<4,>=3.10"
version = "0.6.1"
[[project.authors]]
email = "SPeijnik@anexia-it.com"
name = "Stephan Peijnik-Steinwender"

[project.license]
text = "AGPLv3+"

[project.urls]
homepage = "https://github.com/anexia-it/geofeed-validator"
repository = "https://github.com/anexia-it/geofeed-validator"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-ignore = ["C901"]
#extend-select = ["B", "C", "E", "F", "I", "N", "SIM", "UP", "W"]
extend-select = ["C", "E", "F", "I", "N", "SIM", "UP", "W"]
